# sarthi_ai

./: .env.example  .gitignore  AGENTS.md  AGENT_INSTRUCTION.md  AGENT_SYSTEM.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  AUDIT_AND_PLAN.md  CLEANUP_REPORT.md  CLEANUP_REPORT_PHASE10.md  CODEBASE_EXPLANATION.md  COMPREHENSIVE_TODO.md  DEPLOYMENT.md  FINAL_EVIDENCE_REPORT.md  FINAL_EXECUTION_REPORT.md  LINKEDIN_POST_SUMMARY.md  LinkedInPostGuide.md  Makefile  PERFORMANCE_REPORT.md  PHASE_2_SUMMARY.md  PHASE_7_8_9_REPORT.md  Procfile  QUICK_REFERENCE.md  README.md  SAARATHI_WEEK1_SUMMARY.md  SARTHI V2.0 — PRODUCT REQUIREMENTS DOCUMENT.md  SECURITY_TESTING.md  STRESS_TESTING.md  TODO.md  TemporalVsCeleryPost.md  TemporalVsCelerySummary.md  apps_actual_code.md  buf.gen.yaml  build.sh  docker-compose.old  docker-compose.prod.yml  docker-compose.yml  mockoon.json  prd.md  pytest.ini  (+5 more)
apps/ai/: .env.example  .gitignore  Dockerfile  config.yaml  pyproject.toml  test_verification.py
apps/ai/scripts/: seed_qdrant.py
apps/ai/src/: __init__.py  config.py  debug_server.py  feedback_worker.py  grpc_server.py  main.py  slackbot.py  worker.py  worker_phase4.py
apps/ai/src/activities/: __init__.py  base.py  check_cold_candidates.py  check_relationship_health.py  log_decision.py  memory_maintenance.py  run_anomaly_agent.py  run_bi_agent.py  run_comms_triage_agent.py  run_finance_agent.py  run_guardian_watchlist.py  run_hiring_agent.py  run_investor_agent.py  run_pulse_agent.py  run_qa_agent.py  send_slack_message.py  send_telegram.py  synthesize_weekly_brief.py
apps/ai/src/agents/: __init__.py  admin_desk.py  bank_parser.py  base.py  chief_of_staff.py  chief_of_staff_agent.py  context_interview_agent.py  cs_agent.py  finance_desk.py  finance_monitor.py  graph_memory_agent.py  intelligence_desk.py  it_desk.py  legal_desk.py  memory_agent.py  people_coordinator.py  people_desk.py  revenue_tracker.py  spec.py  supervisor_agent.py  triage.py  trigger_agent.py
apps/ai/src/budget/: __init__.py  manager.py  token_budget.py
apps/ai/src/config/: __init__.py  config_module.py  event_dictionary.py  llm.py  llm_guard.py
apps/ai/src/context/: __init__.py  store.py
apps/ai/src/db/: __init__.py  agent_outputs.py  compliance.py  contracts.py  forecast.py  hiring.py  hitl_actions.py  investor_relationships.py  people.py  policy.py  raw_events.py  (+2 more)
apps/ai/tests/: __init__.py  conftest.py  mock_slack_server.py  test_activities.py  test_admin_desk.py  test_agent_logic.py  test_agents.py  test_chief_of_staff.py  test_chief_of_staff_routing.py  test_context_interview.py  test_cs_agent.py  test_deepeval_evals.py  test_dspy_evals.py  test_e2e_internal_ops.py  test_e2e_saarathi.py  test_e2e_sarthi.py  test_e2e_sop_flows.py  test_e2e_tool_calls.py  test_e2e_workflow.py  test_e2e_workflows.py  test_embeddings.py  test_event_bus.py  test_event_dictionary.py  test_event_envelope.py  test_feature_flag.py  test_finance_desk.py  test_finance_monitor.py  test_graph_memory_agent.py  test_grpc_server.py  test_intelligence_desk.py  test_investor_warmup.py  test_it_desk.py  test_legal_desk.py  test_llm_connectivity.py  test_llm_eval.py  test_llm_evals.py  test_llm_responses.py  test_memory_agent.py  test_orchestration.py  test_people_coordinator.py  (+21 more)
(+395 files in other folders)
